# render-engine

./: .gitignore  Application.cpp  Application.hpp  CMakeLists.txt  Model.cpp  README.md  imgui.ini
asset/material/: gold.json  rust-steel.json
asset/scene/: test-scene.json
doc/: How-to-build-under-M$-Windows.md  todolist.md
include/: Application.hpp  Camera.hpp  CookTorrancePbrObj.hpp  GLFW_Window.hpp  Mesh.hpp  Model.hpp  Object.hpp  PbrRenderer.hpp  Renderer.hpp  SceneGraph.hpp  Shader.hpp  Skybox.hpp  Texture.hpp  glfw_window.hpp  mesh.hpp  model.hpp  renderer.hpp  shader.hpp  simpleWindow.hpp  window_manage.hpp
scenes/: helloTriangle.hpp  triangleTestR.hpp
shader/: brdflut.vert  debug-shadow-map.frag  default.frag  default.vert  prefilter-map.frag  shadow-map-gen.vert  skybox.vert  standard.frag  test.frag  test.vert
shader/debug/: debug-texture.frag  debug-texture.vert
shader/shadow-mapping/: directional-shadow.frag  point-shadow.frag  point-shadow.geom
shader/skybox-and-IBL/: brdflut.frag  cubemap.vert  equirectangular-to-cubemap.frag  skybox.frag
shaders/: brdf.frag  brdf.vert  cook-torrance.frag  cookTorrancePBR.frag  cookTorrancePBR.vert  cubemap.vert  default.frag  equirectangular_to_cubemap.frag  irradiance_convolution.frag  pbr.frag  pbr_notexture.frag  pbr_texture.frag  prefilter_map.frag  skybox.frag  test.fs  test.vs
src/: Application.cpp  CookTorrancePbrObj.cpp  GLFW_Window.cpp  Light.cpp  Mesh.cpp  Model.cpp  Object.cpp  PbrRenderer.cpp  Renderer.cpp  Shader.cpp  Skybox.cpp  Texture.cpp  camera.cpp  glfw_window.cpp  main.cpp  mesh.cpp  model.cpp  shader.cpp  simpleWindow.cpp
src/app/: main.cpp  test.cpp  test_json.cpp
src/app/bullet3test/: MyBullet.h  main.cpp
src/basic/: GUIManager.cpp  GUIManager.hpp  Geometry.cpp  Geometry.hpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Object.hpp  Renderable.cpp  Renderable.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Transform.hpp
src/components/: Component.cpp  Component.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  MyBullet.hpp  Mybullet.cpp  Shader.cpp  Shader.hpp  Transform.cpp  Transform.hpp
src/core/: Camera.cpp  Camera.hpp  Debug.cpp  Debug.hpp  Engine.cpp  Engine.hpp  GUI.cpp  GUI.hpp  GUIManager.cpp  GUIManager.hpp  GameObject.cpp  GameObject.hpp  IBL.hpp  IO.cpp  IO.hpp  IOManager.cpp  IOManager.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  MaterialProperty.cpp  MaterialProperty.hpp  Model.cpp  Model.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  Shadow.cpp  Shadow.hpp  Skybox.cpp  Skybox.hpp  Texture.cpp  Texture.hpp  Transform.hpp  UniformBlock.cpp  UniformBlock.hpp
src/core/shadow/: DirectionalShadow.cpp  DirectionalShadow.hpp  PointShadow.cpp  PointShadow.hpp  Shadow.hpp  SpotShadow.cpp  SpotShadow.hpp
src/core/uniform-blocks/: LightInformation.cpp  LightInformation.hpp  UniformBlock.cpp  UniformBlock.hpp
src/deprecated/: Application.hpp
src/engine/: Application.cpp  Application.hpp  Engine.cpp  Engine.hpp  GUIManager.hpp  IBL.cpp  IBL.hpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Model.cpp  Renderable.hpp  Renderer.cpp  Renderer.hpp  SGNode.cpp  SGNode.hpp  Scene.hpp  SceneGraph.hpp  SceneNode.hpp  Shader.cpp  Shader.hpp  Skybox.cpp  Skybox.hpp  Texture.hpp  main.cpp
src/materials/: PBRMaterial.cpp  PBRMaterial.hpp
src/objects/: CookTorrancePBR.cpp  CookTorrancePBR.hpp  CookTorrancePbr.cpp  CookTorrancePbr.hpp  CookTorrancePbrObj.cpp  CookTorrancePbrObj.hpp  RenderObject.cpp  RenderObject.hpp  SceneGraph.hpp  Skybox.cpp  Skybox.hpp
src/others/: key_process.py
src/uniform-blocks/: GlobalTransform.cpp  GlobalTransform.hpp  GlobalTransformation.cpp  GlobalTransformation.hpp  LightInformation.cpp  LightInformation.hpp  UniformBlock.cpp  UniformBlock.hpp
test/: helloTriangle.hpp  pbrMetalBall.hpp
tests/: TestHelloTriangle.hpp  TestPbrMetalBall.hpp
